--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,19 @@
   </style>
 </head>
 <body>
-  <div id="map"></div>
 
+    <svg width="0" height="0" style="position: absolute; left: -100%;">
+    <defs>
+      <filter id="greyscale-water-filter">
+        <feColorMatrix type="matrix"
+          values="0.3333 0.3333 0.3333 0 0
+                  0.3333 0.3333 0.3333 0 0
+                  0.3333 0.3333 0.3333 0 0
+                  0      0      0      1 0"/>
+      </filter>
+    </defs>
+  </svg>
+  <div id="map"></div>
+  
 </body>
 </html>
